获取主机信息框架初始化
