# docs/swagger.yaml
@@ -748,6 +748,21 @@ paths:
       summary: 查询部门树状结构
       tags:
       - 部门管理
+  /api/hostInfo:
+    get:
+      consumes:
+        - application/json
+      description: 获取主机信息
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: '{"code":200,"data":{"cpu":{"cpuNum":4,"cpuNumUsed":0,"cpuRate":0},"disk":{"diskNum":1,"diskNumUsed":0,"diskRate":0},"mem":{"memNum":0,"memNumUsed":0,"memRate":0},"net":{"netNum":0,"netNumUsed":0,"netRate":0}}}'
+          schema:
+            type: string
+      summary: 获取主机信息
+      tags:
+        - 主机信息
   /api/login:
     post:
       description: 用户登录接口
